--- a/DBpractice1_CastleHistory/WesternCastle1/WesternCastle1/WesternCastle1.csproj
+++ b/DBpractice1_CastleHistory/WesternCastle1/WesternCastle1/WesternCastle1.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Casenumbercheck.cs" />
+    <Compile Include="DataAdd.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search.cs" />
