--- a/DBpractice1_CastleHistory/WesternCastle1/WesternCastle1/WesternCastle1.csproj
+++ b/DBpractice1_CastleHistory/WesternCastle1/WesternCastle1/WesternCastle1.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Casenumbercheck.cs" />
     <Compile Include="DataAdd.cs" />
+    <Compile Include="DataDelete.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search.cs" />
