--- a/DBpractice1_CastleHistory/Japanesecastle1/Japanesecastle1/Japanesecastle1.csproj
+++ b/DBpractice1_CastleHistory/Japanesecastle1/Japanesecastle1/Japanesecastle1.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Delete.cs" />
+    <Compile Include="Insert.cs" />
     <Compile Include="NumberCheck.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
